# bl-class

./: CMakeLists.txt
app/: main.cpp
app/core/: CMakeLists.txt  dataset.cpp  dataset.h  perceptron.h  perceptron_bias.cpp  perceptron_threshold.cpp  sample.h  samples.h  trainer.cpp  trainer.h
app/core/neurons/: classifier_neuron_by_bias.cpp  classifier_neuron_by_threshold.cpp  neurons.h  regression_neuron.cpp
app/core/trainers/: classifier_trainer.cpp  regression_trainer.cpp  trainers.h
app/gui/: CMakeLists.txt  appstate.h  gui_manager.cpp  gui_manager.h
